# autonomous-carebot

./: README.MD
docs/: dependencies.md
install/: .rosinstall  local_setup.sh  setup.sh
install/include/turtlebot3_msgs/: SensorState.h  Sound.h  VersionInfo.h
install/share/cim_turtlebot3_mapping/cmake/: cim_turtlebot3_mappingConfig.cmake
install/share/cim_turtlebot3_physical/cmake/: cim_turtlebot3_physicalConfig.cmake
install/share/cim_turtlebot3_simulation/: package.xml
install/share/cim_turtlebot3_simulation/cmake/: cim_turtlebot3_simulationConfig.cmake
install/share/cim_turtlebot3_topic_tester/cmake/: cim_turtlebot3_topic_testerConfig.cmake
install/share/explore_lite/cmake/: explore_liteConfig.cmake
install/share/turtlebot3_bringup/cmake/: turtlebot3_bringupConfig.cmake
install/share/turtlebot3_description/cmake/: turtlebot3_descriptionConfig.cmake
install/share/turtlebot3_gazebo/cmake/: turtlebot3_gazeboConfig.cmake
install/share/turtlebot3_msgs/cmake/: turtlebot3_msgsConfig.cmake
install/share/turtlebot3_navigation/cmake/: turtlebot3_navigationConfig.cmake
install/share/turtlebot3_slam/cmake/: turtlebot3_slamConfig.cmake
src/hello_world/: CMakeCache.txt  CMakeLists.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  package.xml
src/hello_world/atomic_configure/: .rosinstall  local_setup.sh  setup.sh
src/hello_world/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
src/hello_world/catkin_generated/installspace/: hello_world.pc  hello_worldConfig.cmake
src/hello_world/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/hello_world/gtest/gtest/: CTestTestfile.cmake  Makefile
src/hello_world/src/: hello_world_node.cpp
src/turtlebot3_cimsolutions/cim_turtlebot3_directioning/: CMakeLists.txt  package.xml
src/turtlebot3_cimsolutions/cim_turtlebot3_directioning/launch/: cim_turtlebot3_directioning.launch
src/turtlebot3_cimsolutions/cim_turtlebot3_directioning/src/: DegreesConverter.cpp  DegreesConverter.h  DirectioningApp.cpp  EulerAnglesConverter.cpp  EulerAnglesConverter.h  MagneticField.cpp  MagneticField.h  Odometry.cpp  Odometry.h  OdometryListener.cpp  OdometryListener.h  Orientation.cpp  Orientation.h  PublisherSubscriber.h  Rotate.cpp  Rotate.h  SensorListener.cpp  SensorListener.h
src/turtlebot3_cimsolutions/cim_turtlebot3_localization/: CMakeLists.txt  package.xml
src/turtlebot3_cimsolutions/cim_turtlebot3_localization/launch/: cim_turtlebot3_localization.launch
src/turtlebot3_cimsolutions/cim_turtlebot3_localization/src/: CoordinateSystemConverter.cpp  CoordinateSystemConverter.h  DimensionVectors.h  LocalizationApp.cpp  Localizator.cpp  Localizator.h  MapCalculator.cpp  MapCalculator.h  Mover.cpp  Mover.h
src/turtlebot3_cimsolutions/cim_turtlebot3_mapping/: CMakeCache.txt  CMakeLists.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  package.xml
src/turtlebot3_cimsolutions/cim_turtlebot3_mapping/atomic_configure/: .rosinstall  local_setup.sh  setup.sh
src/turtlebot3_cimsolutions/cim_turtlebot3_mapping/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
src/turtlebot3_cimsolutions/cim_turtlebot3_mapping/catkin_generated/installspace/: cim_turtlebot3_mapping.pc  cim_turtlebot3_mappingConfig.cmake
src/turtlebot3_cimsolutions/cim_turtlebot3_mapping/catkin_generated/stamps/cim_turtlebot3_mapping/: _setup_util.py.stamp
src/turtlebot3_cimsolutions/cim_turtlebot3_mapping/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/turtlebot3_cimsolutions/cim_turtlebot3_mapping/gtest/gtest/: CTestTestfile.cmake  Makefile
src/turtlebot3_cimsolutions/cim_turtlebot3_mapping/launch/: cim_turtlebot3_mapping.launch  cim_turtlebot3_mapping_existing.launch  cim_turtlebot3_mapping_gmapping_physical.launch  cim_turtlebot3_mapping_gmapping_simulation.launch  cim_turtlebot3_mapping_new.launch
src/turtlebot3_cimsolutions/cim_turtlebot3_mapping/src/: LauncherApp.cpp  ListenerApp.cpp  MapIO.cpp  MapIO.h  MapLauncher.cpp  MapLauncher.h  MapListener.cpp  MapListener.h  MapProvider.cpp  MapProvider.h  MapPublisher.cpp  MapPublisher.h  Program.cpp  ProviderApp.cpp  PublisherApp.cpp
src/turtlebot3_cimsolutions/cim_turtlebot3_physical/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
src/turtlebot3_cimsolutions/cim_turtlebot3_runner/: CMakeLists.txt  package.xml
src/turtlebot3_cimsolutions/cim_turtlebot3_simulation/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
src/turtlebot3_cimsolutions/cim_turtlebot3_topic_tester/: CMakeLists.txt  package.xml
src/turtlebot3_cimsolutions/cim_turtlebot3_topic_tester/src/: Program.cpp
src/turtlebot3_prebuild/turtlebot3_bringup/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/turtlebot3_prebuild/turtlebot3_description/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/turtlebot3_prebuild/turtlebot3_gazebo/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/turtlebot3_prebuild/turtlebot3_navigation/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/turtlebot3_prebuild/turtlebot3_slam/: CTestTestfile.cmake  Makefile  cmake_install.cmake
(+43 files in other folders)
